[gd_scene load_steps=4 format=3 uid="uid://bu4kg657ywafu"]

[ext_resource type="Texture2D" uid="uid://cl5twyp70fhdv" path="res://img/atlas/gairoju.png" id="1_rsys4"]
[ext_resource type="Script" path="res://scenes/ki/ki.gd" id="2_66hcq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g8uub"]
size = Vector2(14.2857, 20)

[node name="Ki" type="Sprite2D"]
z_as_relative = false
y_sort_enabled = true
texture_filter = 1
scale = Vector2(0.7, 0.7)
texture = ExtResource("1_rsys4")
offset = Vector2(0, -120)
region_enabled = true
region_rect = Rect2(103, 211, 83, 278)
script = ExtResource("2_66hcq")

[node name="KiArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KiArea"]
position = Vector2(2.85714, -2.85714)
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_g8uub")

[node name="Label" type="Label" parent="."]
offset_left = 11.4286
offset_top = -37.1429
offset_right = 51.4286
offset_bottom = -14.1429

[connection signal="area_entered" from="KiArea" to="." method="_on_ki_area_area_entered"]
[connection signal="area_exited" from="KiArea" to="." method="_on_ki_area_area_exited"]
